# local-match-exporter

./: package.json  svelte.config.js  tailwind.config.cjs
.storybook/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/components/: ConnectionDot.stories.svelte  ConnectionDot.svelte  ConnectionIndicator.stories.svelte  ConnectionIndicator.svelte
src/routes/: index.svelte
static/: connection_dot.riv
